corregido datos de la tabla

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Medicado truncatula</td>\n",
+       "      <td>Medicago truncatula</td>\n",
        "      <td>120</td>\n",
        "      <td>32.1</td>\n",
        "      <td>23</td>\n",
@@ -90,7 +90,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Medicado truncatula</td>\n",
+       "      <td>Medicago truncatula</td>\n",
        "      <td>110</td>\n",
        "      <td>31.3</td>\n",
        "      <td>24</td>\n",
@@ -114,7 +114,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Medicado truncatula</td>\n",
+       "      <td>Medicago truncatula</td>\n",
        "      <td>115</td>\n",
        "      <td>30.9</td>\n",
        "      <td>22</td>\n",
@@ -138,7 +138,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Medicado truncatula</td>\n",
+       "      <td>Medicago truncatula</td>\n",
        "      <td>105</td>\n",
        "      <td>29.5</td>\n",
        "      <td>24</td>\n",
@@ -152,19 +152,19 @@
        "                 Planta  Población  Altura (cm)  Temperatura (°C)  Humedad (%)\n",
        "0           Glycine max        100         30.5                25           60\n",
        "1    Phaseolus vulgaris         80         25.2                28           55\n",
-       "2   Medicado truncatula        120         32.1                23           58\n",
+       "2   Medicago truncatula        120         32.1                23           58\n",
        "3           Glycine max         95         28.9                27           62\n",
        "4    Phaseolus vulgaris         85         26.5                26           59\n",
-       "5   Medicado truncatula        110         31.3                24           61\n",
+       "5   Medicago truncatula        110         31.3                24           61\n",
        "6           Glycine max        105         29.8                25           63\n",
        "7    Phaseolus vulgaris         75         24.7                29           56\n",
-       "8   Medicado truncatula        115         30.9                22           57\n",
+       "8   Medicago truncatula        115         30.9                22           57\n",
        "9           Glycine max         90         27.6                26           64\n",
        "10   Phaseolus vulgaris         70         23.8                30           58\n",
-       "11  Medicado truncatula        105         29.5                24           62"
+       "11  Medicago truncatula        105         29.5                24           62"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
