--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -45,6 +45,7 @@
        "      <th>Altura (cm)</th>\n",
        "      <th>Temperatura (°C)</th>\n",
        "      <th>Humedad (%)</th>\n",
+       "      <th>Crecimiento</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -55,6 +56,7 @@
        "      <td>30.5</td>\n",
        "      <td>25</td>\n",
        "      <td>60</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -63,6 +65,7 @@
        "      <td>25.2</td>\n",
        "      <td>28</td>\n",
        "      <td>55</td>\n",
+       "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -71,6 +74,7 @@
        "      <td>32.1</td>\n",
        "      <td>23</td>\n",
        "      <td>58</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -79,6 +83,7 @@
        "      <td>28.9</td>\n",
        "      <td>27</td>\n",
        "      <td>62</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -87,6 +92,7 @@
        "      <td>26.5</td>\n",
        "      <td>26</td>\n",
        "      <td>59</td>\n",
+       "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -95,6 +101,7 @@
        "      <td>31.3</td>\n",
        "      <td>24</td>\n",
        "      <td>61</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -103,6 +110,7 @@
        "      <td>29.8</td>\n",
        "      <td>25</td>\n",
        "      <td>63</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -111,6 +119,7 @@
        "      <td>24.7</td>\n",
        "      <td>29</td>\n",
        "      <td>56</td>\n",
+       "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -119,6 +128,7 @@
        "      <td>30.9</td>\n",
        "      <td>22</td>\n",
        "      <td>57</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -127,6 +137,7 @@
        "      <td>27.6</td>\n",
        "      <td>26</td>\n",
        "      <td>64</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -135,6 +146,7 @@
        "      <td>23.8</td>\n",
        "      <td>30</td>\n",
        "      <td>58</td>\n",
+       "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -143,25 +155,40 @@
        "      <td>29.5</td>\n",
        "      <td>24</td>\n",
        "      <td>62</td>\n",
+       "      <td>Óptimo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Planta  Población  Altura (cm)  Temperatura (°C)  Humedad (%)\n",
-       "0           Glycine max        100         30.5                25           60\n",
-       "1    Phaseolus vulgaris         80         25.2                28           55\n",
-       "2   Medicago truncatula        120         32.1                23           58\n",
-       "3           Glycine max         95         28.9                27           62\n",
-       "4    Phaseolus vulgaris         85         26.5                26           59\n",
-       "5   Medicago truncatula        110         31.3                24           61\n",
-       "6           Glycine max        105         29.8                25           63\n",
-       "7    Phaseolus vulgaris         75         24.7                29           56\n",
-       "8   Medicago truncatula        115         30.9                22           57\n",
-       "9           Glycine max         90         27.6                26           64\n",
-       "10   Phaseolus vulgaris         70         23.8                30           58\n",
-       "11  Medicago truncatula        105         29.5                24           62"
+       "                 Planta  Población  Altura (cm)  Temperatura (°C)  \\\n",
+       "0           Glycine max        100         30.5                25   \n",
+       "1    Phaseolus vulgaris         80         25.2                28   \n",
+       "2   Medicago truncatula        120         32.1                23   \n",
+       "3           Glycine max         95         28.9                27   \n",
+       "4    Phaseolus vulgaris         85         26.5                26   \n",
+       "5   Medicago truncatula        110         31.3                24   \n",
+       "6           Glycine max        105         29.8                25   \n",
+       "7    Phaseolus vulgaris         75         24.7                29   \n",
+       "8   Medicago truncatula        115         30.9                22   \n",
+       "9           Glycine max         90         27.6                26   \n",
+       "10   Phaseolus vulgaris         70         23.8                30   \n",
+       "11  Medicago truncatula        105         29.5                24   \n",
+       "\n",
+       "    Humedad (%) Crecimiento  \n",
+       "0            60      Óptimo  \n",
+       "1            55  Deficiente  \n",
+       "2            58      Óptimo  \n",
+       "3            62      Óptimo  \n",
+       "4            59  Deficiente  \n",
+       "5            61      Óptimo  \n",
+       "6            63      Óptimo  \n",
+       "7            56  Deficiente  \n",
+       "8            57      Óptimo  \n",
+       "9            64      Óptimo  \n",
+       "10           58  Deficiente  \n",
+       "11           62      Óptimo  "
       ]
      },
      "execution_count": 2,
@@ -177,10 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# agregar categorización: por encima de determinadas alturas son altas, y debajo bajas (punto de corte)\n",
+    "# encontrar yo lo anterior con un histograma, \n",
+    "# test de chi cuadrado para encontrar el punto de corte entre dos poblaciones\n",
+    "# hacer el trabajo poner un valor de corte y hacer el test (se sabe que crecen hasta determinada altura y poner eso como punto de corte para diferentes test)\n",
+    "# se ha establecido que las plantas con una altura igual o superior a 28 cm se consideran de crecimiento óptimo, \n",
+    "# mientras que las plantas con una altura inferior a 28 cm se consideran de crecimiento deficientes."
+   ]
   }
  ],
  "metadata": {
