comentario en codigo

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -211,7 +211,8 @@
     "# agregar categorización: por encima de determinadas alturas son altas, y debajo bajas (punto de corte)\n",
     "# encontrar yo lo anterior con un histograma, \n",
     "# test de chi cuadrado para encontrar el punto de corte entre dos poblaciones\n",
-    "# hacer el trabajo poner un valor de corte y hacer el test (se sabe que crecen hasta determinada altura y poner eso como punto de corte para diferentes test)\n",
+    "# hacer el trabajo poner un valor de corte y hacer el test (se sabe que crecen hasta determinada altura \n",
+    "# y poner eso como punto de corte para diferentes test)\n",
     "# se ha establecido que las plantas con una altura igual o superior a 28 cm se consideran de crecimiento óptimo, \n",
     "# mientras que las plantas con una altura inferior a 28 cm se consideran de crecimiento deficientes."
    ]
