actualización de la tabla

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -458,10 +458,10 @@
     "#Esta estadística cuantifica la diferencia entre las medias de las dos muestras y se utiliza para evaluar la significancia del resultado.\n",
     "\n",
     "#Valor p (p-value): El valor p obtenido es 0.00016243814853461255. \n",
-    "#Este valor p es una medida de la significancia estadística y se utiliza para determinar si se puede rechazar o no la hipótesis nula.\n",
+    "#determinar si se puede rechazar o no la hipótesis nula.\n",
     "\n",
-    "#Interpretación: Dado que el valor p es menor que un umbral de significancia comúnmente utilizado, \n",
-    "#como 0.05, se puede concluir que hay evidencia estadística para rechazar la hipótesis nula. \n",
+    "#valor p es menor que un umbral de significancia comúnmente utilizado, \n",
+    "#se puede concluir que hay evidencia estadística para rechazar la hipótesis nula. \n",
     "#Esto indica que hay una diferencia significativa entre las medias de las dos muestras. \n",
     "#En este caso, la diferencia es negativa y el valor absoluto de la estadística de prueba es grande, \n",
     "#lo que indica que la media de la primera muestra es significativamente menor que la media de la segunda muestra.\n",
