--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "import numpy as np\n",
     "from statsmodels.stats.power import TTestIndPower\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import linregress"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +193,7 @@
        "11           62      Óptimo  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -310,13 +312,13 @@
     "alpha = 0.05      # nivel de significancia\n",
     "power = 0.8       # potencia\n",
     "ratio = 1         # relación entre los tamaños de las muestras\n",
-    "n1 = smp.tt_ind_solve_power(effect_size=effect_size, alpha=alpha, power=power, ratio=ratio)\n",
+    "n = smp.tt_ind_solve_power(effect_size=effect_size, alpha=alpha, power=power, ratio=ratio)\n",
     "print(\"El tamaño muestral necesario es:\", round(n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +335,13 @@
     "alpha = 0.05      # nivel de significancia\n",
     "power = 0.8       # potencia\n",
     "ratio = 1         # relación entre los tamaños de las muestras\n",
-    "n2 = smp.tt_ind_solve_power(effect_size=effect_size, alpha=alpha, power=power, ratio=ratio)\n",
+    "n = smp.tt_ind_solve_power(effect_size=effect_size, alpha=alpha, power=power, ratio=ratio)\n",
     "print(\"El tamaño muestral necesario es:\", round(n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
        "Ttest_indResult(statistic=-13.53353895715043, pvalue=0.00016243814853461255)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,41 +474,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'float' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:165\u001b[0m, in \u001b[0;36m_na_arithmetic_op\u001b[1;34m(left, right, op, is_cmp)\u001b[0m\n\u001b[0;32m    164\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 165\u001b[0m     result \u001b[39m=\u001b[39m func(left, right)\n\u001b[0;32m    166\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:241\u001b[0m, in \u001b[0;36mevaluate\u001b[1;34m(op, a, b, use_numexpr)\u001b[0m\n\u001b[0;32m    239\u001b[0m     \u001b[39mif\u001b[39;00m use_numexpr:\n\u001b[0;32m    240\u001b[0m         \u001b[39m# error: \"None\" not callable\u001b[39;00m\n\u001b[1;32m--> 241\u001b[0m         \u001b[39mreturn\u001b[39;00m _evaluate(op, op_str, a, b)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m    242\u001b[0m \u001b[39mreturn\u001b[39;00m _evaluate_standard(op, op_str, a, b)\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:129\u001b[0m, in \u001b[0;36m_evaluate_numexpr\u001b[1;34m(op, op_str, a, b)\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[39mif\u001b[39;00m result \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 129\u001b[0m     result \u001b[39m=\u001b[39m _evaluate_standard(op, op_str, a, b)\n\u001b[0;32m    131\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:70\u001b[0m, in \u001b[0;36m_evaluate_standard\u001b[1;34m(op, op_str, a, b)\u001b[0m\n\u001b[0;32m     69\u001b[0m     _store_test_result(\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m---> 70\u001b[0m \u001b[39mreturn\u001b[39;00m op(a, b)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'str'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[109], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#tabla de cotingencia (encontrar relación entre variables)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df1 \u001b[39m=\u001b[39m legumes [\u001b[39m'\u001b[39;49m\u001b[39mAltura (cm)\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m+\u001b[39;49m legumes [\u001b[39m'\u001b[39;49m\u001b[39mCrecimiento\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m      4\u001b[0m a \u001b[39m=\u001b[39m legumes [\u001b[39m'\u001b[39m\u001b[39mAltura (cm)\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m28.0\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      5\u001b[0m b \u001b[39m=\u001b[39m legumes [\u001b[39m'\u001b[39m\u001b[39mCrecimiento\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mÓptimo\u001b[39m\u001b[39m'\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\ops\\common.py:72\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[0;32m     70\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 72\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\arraylike.py:102\u001b[0m, in \u001b[0;36mOpsMixin.__add__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__add__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    101\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__add__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[1;32m--> 102\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_arith_method(other, operator\u001b[39m.\u001b[39;49madd)\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py:6259\u001b[0m, in \u001b[0;36mSeries._arith_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   6257\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_arith_method\u001b[39m(\u001b[39mself\u001b[39m, other, op):\n\u001b[0;32m   6258\u001b[0m     \u001b[39mself\u001b[39m, other \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39malign_method_SERIES(\u001b[39mself\u001b[39m, other)\n\u001b[1;32m-> 6259\u001b[0m     \u001b[39mreturn\u001b[39;00m base\u001b[39m.\u001b[39;49mIndexOpsMixin\u001b[39m.\u001b[39;49m_arith_method(\u001b[39mself\u001b[39;49m, other, op)\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\base.py:1325\u001b[0m, in \u001b[0;36mIndexOpsMixin._arith_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   1322\u001b[0m rvalues \u001b[39m=\u001b[39m ensure_wrapped_if_datetimelike(rvalues)\n\u001b[0;32m   1324\u001b[0m \u001b[39mwith\u001b[39;00m np\u001b[39m.\u001b[39merrstate(\u001b[39mall\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m-> 1325\u001b[0m     result \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39;49marithmetic_op(lvalues, rvalues, op)\n\u001b[0;32m   1327\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_construct_result(result, name\u001b[39m=\u001b[39mres_name)\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:226\u001b[0m, in \u001b[0;36marithmetic_op\u001b[1;34m(left, right, op)\u001b[0m\n\u001b[0;32m    222\u001b[0m     _bool_arith_check(op, left, right)\n\u001b[0;32m    224\u001b[0m     \u001b[39m# error: Argument 1 to \"_na_arithmetic_op\" has incompatible type\u001b[39;00m\n\u001b[0;32m    225\u001b[0m     \u001b[39m# \"Union[ExtensionArray, ndarray[Any, Any]]\"; expected \"ndarray[Any, Any]\"\u001b[39;00m\n\u001b[1;32m--> 226\u001b[0m     res_values \u001b[39m=\u001b[39m _na_arithmetic_op(left, right, op)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n\u001b[0;32m    228\u001b[0m \u001b[39mreturn\u001b[39;00m res_values\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:172\u001b[0m, in \u001b[0;36m_na_arithmetic_op\u001b[1;34m(left, right, op, is_cmp)\u001b[0m\n\u001b[0;32m    166\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m    167\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_cmp \u001b[39mand\u001b[39;00m (is_object_dtype(left\u001b[39m.\u001b[39mdtype) \u001b[39mor\u001b[39;00m is_object_dtype(right)):\n\u001b[0;32m    168\u001b[0m         \u001b[39m# For object dtype, fallback to a masked operation (only operating\u001b[39;00m\n\u001b[0;32m    169\u001b[0m         \u001b[39m#  on the non-missing values)\u001b[39;00m\n\u001b[0;32m    170\u001b[0m         \u001b[39m# Don't do this for comparisons, as that will handle complex numbers\u001b[39;00m\n\u001b[0;32m    171\u001b[0m         \u001b[39m#  incorrectly, see GH#32047\u001b[39;00m\n\u001b[1;32m--> 172\u001b[0m         result \u001b[39m=\u001b[39m _masked_arith_op(left, right, op)\n\u001b[0;32m    173\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    174\u001b[0m         \u001b[39mraise\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\dardo\\anaconda3\\lib\\site-packages\\pandas\\core\\ops\\array_ops.py:110\u001b[0m, in \u001b[0;36m_masked_arith_op\u001b[1;34m(x, y, op)\u001b[0m\n\u001b[0;32m    108\u001b[0m     \u001b[39m# See GH#5284, GH#5035, GH#19448 for historical reference\u001b[39;00m\n\u001b[0;32m    109\u001b[0m     \u001b[39mif\u001b[39;00m mask\u001b[39m.\u001b[39many():\n\u001b[1;32m--> 110\u001b[0m         result[mask] \u001b[39m=\u001b[39m op(xrav[mask], yrav[mask])\n\u001b[0;32m    112\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_scalar(y):\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crecimiento  False  True \n",
+      "Altura (cm)              \n",
+      "False            4      1\n",
+      "True             0      7\n",
+      "Empty DataFrame\n",
+      "Columns: [False, True]\n",
+      "Index: []\n"
      ]
     }
    ],
    "source": [
-    "#tabla de cotingencia (encontrar relación entre variables)\n",
-    "df1 = legumes ['Altura (cm)'] + legumes ['Crecimiento']\n",
+    "#tabla de contingencia (encontrar relación entre variables)\n",
     "\n",
-    "a = legumes ['Altura (cm)'] >= '28.0'\n",
-    "b = legumes ['Crecimiento'] == 'Óptimo'\n",
+    "df1 = pd.crosstab(legumes['Altura (cm)'] >= 28.0, legumes['Crecimiento'] == 'Óptimo')\n",
+    "print(df1)\n",
     "\n",
     "#comparamos los datos en una tabla de contingencia\n",
     "groups = df1.groupby([a,b]).count() \n",
@@ -515,10 +504,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 315,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chi cuadrado: 5.185714285714285\n",
+      "Valor p: 0.022773309501244822\n",
+      "Grados de libertad: 1\n",
+      "Valores esperados: [[1.66666667 3.33333333]\n",
+      " [2.33333333 4.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test de comparación de datos cualitativos (necesita una tabla de contingencia)\n",
+    "# Crear la tabla de contingencia\n",
+    "tabla_contingencia = pd.crosstab(legumes['Altura (cm)'] >= 28.0, legumes['Crecimiento'] == 'Óptimo')\n",
+    "\n",
+    "# Realizar el test de chi-cuadrado\n",
+    "chi2, p_value, dof, expected = chi2_contingency(tabla_contingencia)\n",
+    "\n",
+    "# Imprimir los resultados\n",
+    "print(\"chi cuadrado:\", chi2)\n",
+    "print(\"Valor p:\", p_value)\n",
+    "print(\"Grados de libertad:\", dof)\n",
+    "print(\"Valores esperados:\", expected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(r): 0.38672191231018677\n",
+      "P value: 0.21429805054468382\n",
+      "Coeficiente de regresión (pendiente): 0.3987371375116933\n",
+      "Error estándar: 0.3006846923850679\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Obtener los datos de altura y humedad\n",
+    "altura = legumes['Altura (cm)']\n",
+    "humedad = legumes['Humedad (%)']\n",
+    "\n",
+    "# Calcular la recta de regresión\n",
+    "slope, intercept, r_value, p_value, std_err = linregress(altura, humedad)\n",
+    "\n",
+    "print(\"(r):\", r_value)\n",
+    "print(\"P value:\", p_value)\n",
+    "print(\"Coeficiente de regresión (pendiente):\", slope)\n",
+    "print(\"Error estándar:\", std_err)"
+   ]
   }
  ],
  "metadata": {
