Verificar tabla de contingencia

--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "11           62      Óptimo  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "Ttest_indResult(statistic=-13.53353895715043, pvalue=0.00016243814853461255)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -513,12 +513,13 @@
     "\n",
     "#comparamos los datos en una tabla de contingencia\n",
     "groups = df1.groupby([legumes['Altura (cm)'],legumes['Crecimiento']]).count() \n",
-    "print (groups)"
+    "print (groups)\n",
+    "#graficar porcentaje "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,8 @@
     "print(\"(r):\", r_value)\n",
     "print(\"P value:\", p_value)\n",
     "print(\"Coeficiente de regresión (pendiente):\", slope)\n",
-    "print(\"Error estándar:\", std_err)\n"
+    "print(\"Error estándar:\", std_err)\n",
+    "#plt.plot graficar la recta"
    ]
   }
  ],
